CriptoOrg/CriptoOrg/force-app/main/default/objects/Ordem__c/Ordem__c.object-meta.xml
<CustomObject>
    <description>Requisição de uma transação de compra ou venda a serem realizadas em um preço específico.</description>
    <label>Ordem</label>
    <nameField>
        <displayFormat>ORD-{000000}-{DD}-{MM}-{YYYY}</displayFormat>
        <label>Número da Ordem</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ordens</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>