CriptoOrg/CriptoOrg/force-app/main/default/objects/Ordem__c/fields/Carteira__c.field-meta.xml
<CustomField>
    <fullName>Carteira__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Relacionamento entre a carteira e a ordem</description>
    <inlineHelpText>Relacionamento entre a carteira e a ordem</inlineHelpText>
    <label>Carteira</label>
    <referenceTo>Carteira__c</referenceTo>
    <relationshipLabel>Ordens</relationshipLabel>
    <relationshipName>OrdensCarteira</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>