CriptoOrg/CriptoOrg/force-app/main/default/objects/Ordem__c/fields/CotacaoAtual__c.field-meta.xml
<CustomField>
    <fullName>CotacaoAtual__c</fullName>
    <description>Cotção Atual do Mercado</description>
    <inlineHelpText>Cotção Atual do Mercado</inlineHelpText>
    <label>Cotação Atual</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>