CriptoOrg/CriptoOrg/force-app/main/default/objects/Ordem__c/fields/DataCriacao__c.field-meta.xml
<CustomField>
    <fullName>DataCriacao__c</fullName>
    <description>Data de Criação da Ordem</description>
    <inlineHelpText>Data de Criação da Ordem</inlineHelpText>
    <label>Data de Criação</label>
    <type>Date</type>
</CustomField>