CriptoOrg/CriptoOrg/force-app/main/default/objects/Ordem__c/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <label>Link</label>
    <length>254</length>
    <type>Text</type>
</CustomField>