CriptoOrg/CriptoOrg/force-app/main/default/objects/Ordem__c/fields/MoedaPrimaria__c.field-meta.xml
<CustomField>
    <fullName>MoedaPrimaria__c</fullName>
    <description>Moeda Primária</description>
    <formula>Mercado__r.MoedaPrimaria__c</formula>
    <inlineHelpText>Moeda Primária</inlineHelpText>
    <label>Moeda Primária</label>
    <type>Text</type>
</CustomField>