CriptoOrg/CriptoOrg/force-app/main/default/objects/Ordem__c/fields/MoedaSecundaria__c.field-meta.xml
<CustomField>
    <fullName>MoedaSecundaria__c</fullName>
    <description>Moeda Secundária</description>
    <formula>Mercado__r.MoedaSecundaria__c</formula>
    <inlineHelpText>Moeda Secundária</inlineHelpText>
    <label>Moeda Secundária</label>
    <type>Text</type>
</CustomField>