CriptoOrg/CriptoOrg/force-app/main/default/objects/Ordem__c/fields/OperacaoMercado__c.field-meta.xml
<CustomField>
    <fullName>OperacaoMercado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Define se a compra ou a venda é a preço do mercado.</description>
    <inlineHelpText>Define se a compra ou a venda é a preço do mercado.</inlineHelpText>
    <label>Operação a Mercado?</label>
    <type>Checkbox</type>
</CustomField>