CriptoOrg/CriptoOrg/force-app/main/default/objects/Ordem__c/fields/Preco__c.field-meta.xml
<CustomField>
    <fullName>Preco__c</fullName>
    <description>Valor unitário da transação.</description>
    <label>Preço</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>