CriptoOrg/CriptoOrg/force-app/main/default/objects/Ordem__c/fields/Quantidade__c.field-meta.xml
<CustomField>
    <fullName>Quantidade__c</fullName>
    <description>Quantidade a ser negociada na transação.</description>
    <inlineHelpText>Quantidade a ser negociada na transação.</inlineHelpText>
    <label>Quantidade</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>