CriptoOrg/CriptoOrg/force-app/main/default/objects/Ordem__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <description>Valor total da transação.</description>
    <inlineHelpText>Valor total da transação.</inlineHelpText>
    <label>Total</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>