CriptoOrg/CriptoOrg/force-app/main/default/objects/Ordem__c/recordTypes/VendidaPrejuizo.recordType-meta.xml
<RecordType>
    <fullName>VendidaPrejuizo</fullName>
    <active>true</active>
    <label>Vendida com prejuizo</label>
</RecordType>