CriptoOrg/CriptoOrg/force-app/main/default/objects/Ordem__c/validationRules/Nao_cancelar_ordem_executada.validationRule-meta.xml
<ValidationRule>
    <fullName>Nao_cancelar_ordem_executada</fullName>
    <active>true</active>
    <errorConditionFormula>PRIORVALUE( Status__c )  !=  &apos;Executada&apos;  &amp;&amp;  ISPICKVAL(Status__c, &apos;Cancelada&apos;)</errorConditionFormula>
    <errorMessage>Perdeu playboy. O tempo não para. Executou dançou.</errorMessage>
</ValidationRule>