CriptoOrg/CriptoOrg/force-app/main/default/objects/Ordem__c/validationRules/Total_nao_pode_ser_alterado_manualmente.validationRule-meta.xml
<ValidationRule>
    <fullName>Total_nao_pode_ser_alterado_manualmente</fullName>
    <active>false</active>
    <description>Esta regra evita que o usuario altere o Total depois que ele já foi preenchido inicialmente.</description>
    <errorConditionFormula>NOT(ISNEW()) &amp;&amp;  ISCHANGED( Total__c ) &amp;&amp; NOT( ISCHANGED( Quantidade__c )) &amp;&amp; NOT(ISCHANGED( Preco__c ))</errorConditionFormula>
    <errorDisplayField>Total__c</errorDisplayField>
    <errorMessage>O Total não pode ser editado após a criação do registro.</errorMessage>
</ValidationRule>